# group-play-service

./: AUTHORS  CMakeLists.txt  README.md  tizen_server.c
packaging/: group-play-service.service  group-play-service.spec
server/: CMakeLists.txt
server/include/: common.h  udp_test.h
server/lib/: libosp-appfw.so.1
server/src/: common.cpp  main.cpp  udp_test.cpp
